--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+          <h3>Aise he bar bar mere page pe aa kar apni gandmareye.</h3>
           <p class="contact-message">The greatest obstacle to discovery is not ignorance; it is the illusion of knowledge.</p>
           <a class="btn" href="tel:7000043467">CONTACT ME</a>
         </div>
@@ -50,7 +50,7 @@
       
       
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://www.linkedin.com/">Instagram</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
         <p class="copyright">© Rajju Thakre @ Since 1999</p>
